fixed responsive design of carousel on small screen.

--- a/waggli/css/my-custom-style.css
+++ b/waggli/css/my-custom-style.css
@@ -169,7 +169,7 @@ h1, h2, h3, h4, h5, h6{
     background:transparent;
 }
     .about-us .section-header{
-        color: #262626 !important;
+        color: #000 !important;
         position: absolute;
         text-align: left;
         z-index: 2;
@@ -182,10 +182,11 @@ h1, h2, h3, h4, h5, h6{
         .about-us .section-header h2{
             margin-top:1%;
             margin-left:1%;
-            color: #262626 !important;
-            text-shadow: 0px 10px 20px #222;
+            color: #000 !important;
+            text-shadow: 0 0 5px #FFF;
             display: inline-block;
             vertical-align: top;
+            padding-bottom:0;
         }
         .about-us .section-legend{
             margin:0;
@@ -194,17 +195,17 @@ h1, h2, h3, h4, h5, h6{
             padding: 2px;
             margin-left: 1%;
             margin-right: 1%;
-            text-shadow: 0px 5px 10px #222;
-            color: #262626 !important;
+            text-shadow: 0 0 10px #FFF;
+            color: #000 !important;
             width:25%;
         }
         @media (max-width: 768px) {
             .about-us .section-legend{
-                font-size: 80%;
-                width:96%;
-                margin-top:75px;
-                background-color:rgba(255,255,255,0.8);
-                margin-left: 2%;
+                font-size: 60%;
+                width:33%;
+                margin:0;
+                padding:0;
+                margin-left:1%;
             }
         }
         @media (min-width: 480px) {
